--- a/Gmt/templates/views/doctors.hbs
+++ b/Gmt/templates/views/doctors.hbs
@@ -36,7 +36,7 @@
 									<input type="hidden" id="procedureId" name="procedureId" value="">
 								</div>
 								<div class="col-md-3 col-lg-3 col-sm-3 col-xs-10  main_button">
-									<button type="submit" class="btn btn-primary btn-md rais" style="">
+									<button type="submit" class="btn btn-primary btn-md rais">
 										<span class="search_doc">Search Doctors</span>
 									</button>
 								</div>
@@ -119,14 +119,14 @@
 	<div class="col-lg-4 col-sm-4 col-xs-0 col-md-4 qwe">
 		<h4 class="specialities" style="background-color:rgb(198,198,198);color:white;">Filter Doctors by Procedure</h4>
 		<!-- <div class="panel-group panel_doc" id="accordion" role="tablist" aria-multiselectable="true" style="border-left: solid 2px rgb(198,198,198);border-right: solid 2px rgb(198,198,198);border-bottom: solid 2px rgb(198,198,198); border-top:solid 8px rgb(198,198,198);"> -->
-		<div id="accordion" class="panel-group panel_doc" style=" " aria-multiselectable="true" role="tablist">
+		<div id="accordion" class="panel-group panel_doc"  aria-multiselectable="true" role="tablist">
 			{{#each speciality}}
 				<div class="panel panel-default">
 					<div id="headingOne" class="panel-heading panel_heading" style="border-width: 0px 0px 2px; border-bottom: 2px solid rgb(198, 198, 198);" role="tab">
 						<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="false" aria-controls="collapseOne" style="outline:none;color:black;">
 							<h4 class="panel-title" style="padding-left:5px;">
 								<div class="row accordion_doc">
-									<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 " style="">
+									<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
 										<img src="/images/{{key}}.png" width="60%" height="auto">
 									</div>
 									<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 pro" style="padding-top:4px;">
