--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -22,27 +22,27 @@
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">The perfect place for a complete recovery</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Best priced healthcare </h2>
 						<div class="row">
-							<div class="col-lg-6">
+							<div class="col-lg-4" style="padding-right:0px">
 								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
 							</div>
-							<div class="col-lg-4" style="padding-left:35px;">
-								<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
+							<div class="col-lg-4 " style="">
+								<p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;">learn more...</p>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="item">
+				<div class="item ">
 					<img src="../images/GMTHomeWellness1.jpg" style="width:100%;height:auto;">
 					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Experience the power of inner healing</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Choose the ideal location</h2>
 						<div class="row">
-							<div class="col-lg-6">
+							<div class="col-lg-6" style="padding-right:0px;">
 								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
 							</div>
-							<div class="col-lg-4 no-padding" style="right:15px;">
-								<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
+							<div class="col-lg-4 " style="padding-left:0px;">
+								<p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;margin-left:-30px;">learn more...</p>
 							</div>
 						</div>
 					</div>
@@ -54,110 +54,90 @@
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Treat your health with a vacation</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Preventive care programs</h2>
 						<div class="row">
-							<div class="col-lg-5">
+							<div class="col-lg-5" style="padding-right:0px;">
 								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Curative healing packages</h2>
 							</div>
-							<div class="col-lg-4 no-padding">
-								<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
+							<div class="col-lg-4" style="padding-left:0px;">
+								<p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;margin-left:-15px">learn more...</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- <div class="carousel-caption" style="right: 72px; left:10px; padding-left: 200px; text-align: right;">
-
-			<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">The perfect place for a complete recovery</h2>
-				<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Best priced healthcare </h2>
-				<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
-
-			text-shadow: 0 1px 3px rgba(0, 0, 0, 20);
-		</div> -->
-		<!-- <div class="row">
-				<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12"></div>
-				<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
-					<p style="margin-left: -2px;margin-top: 40px;">The perfect place for a complete recovery</p>
-
-				</div>
-			</div> -->
-
-
 	</div>
 
 	<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="/js/pro.js"></script>
 	<script src="/js/image.js"></script>
+
 	<div class="row index_choose">
 		<p class="title">How You Choose</p>
 		<div class="row" style="padding-bottom: 20px;">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
 						<a href="/providers/hospitals" style="outline:none;">
 							<div class="thumbnail   " style="padding-left: 90px;border:none;">
-								<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;  border-top-left-radius: 10px;border-top-right-radius: 10px;">
-									<img alt="Goa Medical Travel" src="/images/Icons_Hospital Home.png" class="image  " align="middle" style="" />
+								<div class="index-border" style="">
+									<img alt="Goa Medical Travel" src="/images/Icons_Hospital Home.png" align="middle"
+									style="margin-bottom: 0;width: 30%;height: auto;margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;" />
 								</div>
-								<!-- <img alt="Goa Medical Travel" src="/images/bariatrics.png" class="  " align="middle"
-							style="margin-bottom: 0px;width:20%;height:auto;border-color:rgb(83,200,171);" /> -->
-								<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-									<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Find the right provider</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Learn about the facilities</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Request for a free quote</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Send customised queries</p>
+								<div class="thumbnail index-info" style="">
+									<h4 style="">Providers</h4>
+									<p style="">Find the right provider</p>
+									<p style="">Learn about the facilities</p>
+									<p style="">Request for a free quote</p>
+									<p style="">Send customised queries</p>
 									<div style=" text-align:center">
-										<span style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+										<span style="">
 											Learn More ...
 										</span>
 									</div>
 								</div>
-
 							</div>
 						</a>
 					</div>
 
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
 						<a href="/procedure/bones-and-joints" style="outline:none;">
 							<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-								<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-									<img alt="Goa Medical Travel" src="/images/poo.png" class="image1 " style="width:47%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
-									display: block;
-									padding: 25px 0 15px 5px;" />
+								<div class="index-border" style="">
+									<img alt="Goa Medical Travel" src="/images/poo.png"
+									style="width:47%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;" />
 								</div>
-								<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-									<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Specialities</h4>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Search by the treatment</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Find provider/doctor option</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Understand pricing</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Get multiple quotes</p>
+								<div class="thumbnail index-info" style="">
+									<h4 style="">Specialities</h4>
+									<p style="">Search by the treatment</p>
+									<p style="">Find provider/doctor option</p>
+									<p style="">Understand pricing</p>
+									<p style="">Get multiple quotes</p>
 									<div style=" text-align:center">
-										<span style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+										<span style="">
 											Learn More ...
 										</span>
 									</div>
 								</div>
-
 							</div>
 						</a>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 no-padding">
 						<a href="/doctors" style="outline:none;">
-							<div class="thumbnail  " style="padding-right: 90px;border-color:rgb(255,255,255)">
-								<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-									<img alt="Goa Medical Travel" src="/images/Icons_DoctorHome.png" class="image2  " style="width:43%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
-									display: block;
-									padding: 25px 0 15px 5px;">
+							<div class="thumbnail" style="padding-right: 90px;border-color:rgb(255,255,255)">
+								<div class="index-border" style="">
+									<img alt="Goa Medical Travel" src="/images/Icons_DoctorHome.png"
+									style="width:43%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;display: block;padding: 25px 0 15px 5px;">
 								</div>
-								<div class="thumbnail  " style="margin-bottom: 0px;border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-									<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Doctors</h4>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Find the right doctor</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Get doctor specific quote</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Choose appropriate facility</p>
-									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Get a second opinion</p>
+								<div class="thumbnail index-info" style="">
+									<h4 style="">Doctors</h4>
+									<p style="">Find the right doctor</p>
+									<p style="">Get doctor specific quote</p>
+									<p style="">Choose appropriate facility</p>
+									<p style="">Get a second opinion</p>
 									<div style=" text-align:center">
-										<span style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+										<span style="">
 											Learn More ...
 										</span>
 									</div>
@@ -169,9 +149,6 @@
 				</div>
 			</div>
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-				<!-- <a href="/services">
-					<input type="submit" value="Learn More">
-				</a> -->
 			</div>
 		</div>
 	</div>
@@ -196,13 +173,11 @@
 				</div> -->
 			</div>
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
-
 		</div>
-
-		<!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
 	</div>
+
 	<div class="row index_help">
-		<p style="font-size:32px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
+		<p class="title" style="font-size:32px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -274,17 +249,16 @@
 		</div>
 
 	</div>
+
 	<div class="row index_choose">
 		<p class="title">What They Say</p>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 				<div class="row">
-
-
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
-						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border:none;padding-bottom: 20px;">
+						<div class="thumbnail" style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div style="border:none;padding-bottom: 20px;" align="middle">
 								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:130px;height:130px;" />
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
@@ -303,8 +277,8 @@
 					</div>
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
-						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border:none;padding-bottom: 20px;">
+						<div class="thumbnail " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+							<div style="border:none;padding-bottom: 20px;" align="middle">
 								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:130px;height:130px;" />
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
@@ -325,7 +299,7 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border:none;padding-bottom: 20px;">
+							<div style="border:none;padding-bottom: 20px;" align="middle">
 								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:130px;height:130px;" />
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
