--- a/Gmt/templates/views/package.hbs
+++ b/Gmt/templates/views/package.hbs
@@ -22,7 +22,7 @@
 						<button type="submit" class="" style="margin-top:12px;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;background-color:white;" data-toggle="modal" data-target="#myModal">Enquire</button>
 					</div>
 				</div>
-				{{{package.discription}}}
+				{{{package.description}}}
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 					{{#each packageSection}}
 						<div class="panel panel-default">
@@ -44,7 +44,7 @@
 							</div>
 							<div id="{{key}}" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
 								<div class="panel-body">
-									{{{discription}}}
+									{{{description}}}
 								</div>
 							</div>
 						</div>
