--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -8,7 +8,7 @@
 				<div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
 				</div>
 				<div class="col-md-10 col-lg-10 col-sm-10 col-xs-12" style="padding-left:12px;">
-					<span style="font-size:30px;font-family:SourceSansPro-Semibold;color:white">{{{specialityn}}}</span>
+					<span>{{{specialityn}}}</span>
 				</div>
 			</div>
 		</div>
@@ -18,7 +18,6 @@
 <div class="row procedure">
 	<!-- row starts -->
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
-		<!-- <img src="../images/cancercare1.jpg" style="height:auto;width:100%;"> -->
 		<div class="">
 
 			<nav class="navbar navbar-default" id="navprocedure">
@@ -103,7 +102,7 @@
 									<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 									</div>
 									<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-										<img src="">
+										<img src="{{cloudinaryUrl imageOuter}}">
 										<!-- {{cloudinaryUrl imageOuter}} -->
 									</div>
 									<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 procedure-doc">
@@ -150,7 +149,7 @@
 													<div class="row accordion">
 														<div class="col-lg-6 col-sm-6 col-xs-6 col-md-6 title">
 															{{name}}
-															<span style="">+</span>
+															<span>+</span>
 															<!-- <span class="fa fa-plus-square-o"></span> -->
 														</div>
 
@@ -159,7 +158,7 @@
 															<span style="font-family: SourceSansPro-Semibold;"> USD {{price}}</span>
 														</div>
 														<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
-															<input class="btn btn-primary btn-md procedure_btn" type="submit" value="Enquiry" style="">
+															<input class="btn btn-primary btn-md procedure_btn" type="submit" value="Enquiry">
 														</div>
 													</div>
 												</a>
