--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,4 +1,5 @@
 <!-- <div class="container"> -->
+
 {{>header}}
 <div class="row marginAlign ">
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
@@ -205,7 +206,7 @@
 													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;">Medical Reports</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 ">
-													<span style="padding-top: 6px;color: rgb(95,95,95);" class="glyphicon glyphicon-chevron-down"></span>
+													<p style="padding-top: 6px;color: rgb(95,95,95);" class="glyphicon glyphicon-chevron-down"></p>
 												</div>
 											</div>
 										</h4>
@@ -227,7 +228,7 @@
 													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;"> Allergies</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
-													<span style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></span>
+													<p style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></p>
 												</div>
 											</div>
 										</h4>
@@ -250,7 +251,7 @@
 														Symptoms</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
-													<span style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></span>
+													<p style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></p>
 												</div>
 											</div>
 										</h4>
