--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -202,11 +202,11 @@
 									<a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row form_accordion">
-												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title" style="padding-top:3px">
 													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;">Medical Reports</span>
 												</div>
-												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 ">
-													<p style="padding-top: 6px;color: rgb(95,95,95);" class="glyphicon glyphicon-chevron-down"></p>
+												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
+													<span style="padding-top: 6px;color: rgb(95,95,95);" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
@@ -224,11 +224,11 @@
 									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row">
-												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title" style="padding-top:3px">
 													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;"> Allergies</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
-													<p style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></p>
+													<span style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
@@ -246,12 +246,12 @@
 									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row">
-												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title" style="padding-top:3px">
 													<span style="color: rgb(95,95,95);font-family: SourceSansPro-Regular;font-size: 16px;">
 														Symptoms</span>
 												</div>
 												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
-													<p style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></p>
+													<span style="color:rgb(95,95,95);padding-top: 6px;" class="glyphicon glyphicon-chevron-down"></span>
 												</div>
 											</div>
 										</h4>
