--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -154,9 +154,11 @@
 	</div>
 	<div class="home2" style="margin-bottom: 0px;">
 		<div class="homeimage" style="position:relative">
-			<img alt="Goa Medical Travel" src="/images/GOAhome.jpg" style="width:100%;height:auto">
+			<img alt="Goa Medical Travel" src="/images/GOAhome(1).jpg" style="width:100%;height:auto">
 		</div>
-		<h1 style="position:absolute;top:1050px;left:610px;color:white;text-align:center;font-family:SourceSansPro-Semibold;">GOA</h1>
+		<div class="row" style="position:absolute;left:610px;top:1080px;">
+		<h1 style="color:white;font-family:SourceSansPro-Semibold;">GOA</h1>
+	</div>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -177,7 +179,7 @@
 	</div>
 
 	<div class="row index_help">
-		<p class="title" style="font-size:32px;padding-top:30px; padding-bottom:5px;color:rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
+		<p class="title" style="font-size:32px;padding-top:30px; padding-bottom:5px;color: rgb(149,149,149);text-align:center;font-family:SourceSansPro-Semibold;">How We Help</p>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -187,7 +189,7 @@
 						<div class="thumbnail null">
 							<img src="/images/ProviderResearch149.png" class="image1" id="ex1" style="padding-top:18px; padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
-								<p style="padding-top: 5px;padding-left:25px;">Provider Research</p>
+								<p style="padding-top: 5px;padding-left:25px;color:rgb(47,47,47);">Provider Research</p>
 							</div>
 						</div>
 					</div>
@@ -196,7 +198,7 @@
 						<div class="thumbnail null ">
 							<img src="/images/MedicalVisa149.png" id="ex2" class="image1" style="padding-top:13px;  padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
-								<p style="padding-top: 5px;">Medical Visa</p>
+								<p style="padding-top: 5px;color:rgb(47,47,47);">Medical Visa</p>
 							</div>
 						</div>
 					</div>
@@ -205,7 +207,7 @@
 						<div class="thumbnail null ">
 							<img src="/images/FlightBooking149.png" id="ex3" class="image1  " style="padding-top:27px; padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
-								<p style="padding-top: 5px;padding-left: 11px;">Flight Booking</p>
+								<p style="padding-top: 5px;padding-left: 11px;color:rgb(47,47,47);">Flight Booking</p>
 							</div>
 						</div>
 					</div>
@@ -214,7 +216,7 @@
 						<div class="thumbnail null">
 							<img src="/images/Stay149.png" id="ex4" class="image1  " style="padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
-								<p style="padding-top: 5px; padding-right: 25px;">Stay</p>
+								<p style="padding-top: 5px; padding-right: 25px;color:rgb(47,47,47);">Stay</p>
 							</div>
 						</div>
 					</div>
@@ -223,7 +225,7 @@
 						<div class="thumbnail null">
 							<img src="/images/LocalLogistics149.png" id="ex5" class="image1  " style="padding-top:34px; padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
-								<p style="padding-top: 5px;">Local Logistics</p>
+								<p style="padding-top: 5px;color:rgb(47,47,47);">Local Logistics</p>
 							</div>
 						</div>
 					</div>
@@ -232,7 +234,7 @@
 						<div class="thumbnail null">
 							<img src="/images/Assistance149.png" id="ex6" class="image1" style="padding-top:30px; padding-bottom:20px;" />
 							<div class="thumbnail null " style="margin-bottom: 0px;font-family:SourceSansPro-Regular;">
-								<p style="padding-top: 5px;">Pre/Post Operative Assistance</p>
+								<p style="padding-top: 5px;color:rgb(47,47,47);">Pre/Post Operative Assistance</p>
 							</div>
 						</div>
 					</div>
