--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -8,7 +8,7 @@
 				<div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
 				</div>
 				<div class="col-md-10 col-lg-10 col-sm-10 col-xs-12" style="padding-left:12px;">
-					<span>{{{specialityn}}}</span>
+					<span style="font-size: 30px;font-family: SourceSansPro-Semibold;color: white;">{{{specialityn}}}</span>
 				</div>
 			</div>
 		</div>
@@ -192,11 +192,11 @@
 							<div class="row">
 								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
-								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+								<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
 									<img src="/images/{{key}}.png">
 									<!-- style="width:27px;height:28.1px;position:relative;top:8px" -->
 								</div>
-								<div class="col-lg-9">
+								<div class="col-lg-9 col-sm-8 col-xs-9 col-md-9">
 									<span>{{name}}</span>
 								</div>
 
@@ -209,10 +209,10 @@
 							<div class="row">
 								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
-								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+								<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
 									<img src="/images/{{key}}.png">
 								</div>
-								<div class="col-lg-9">
+								<div class="col-lg-9 col-sm-8 col-xs-9 col-md-9">
 									<span>{{name}}</span>
 								</div>
 							</div>
@@ -226,6 +226,8 @@
 </div>
 <!--row ends-->
 {{>footer}}
+
+
 <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
