--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -275,11 +275,11 @@ table tr:last-child td:last-child {
 				.border {
 								border-right: 1px solid #ededed;
 				}
-				span {
-								font-size: 30px;
-								font-family: SourceSansPro-Semibold;
-								color: white;
-				}
+				// span {
+				// 				font-size: 30px;
+				// 				font-family: SourceSansPro-Semibold;
+				// 				color: white;
+				// }
 }
 .procedure {
 				overflow: hidden;
@@ -726,20 +726,20 @@ a:focus {
 								/* Firefox 18- */
 								font-family: SourceSansPro-ExtraLight;
 								font-size: 16px;
-								color:rgb(43,43,43);
+								color: rgb(43,43,43);
 				}
 				 ::-moz-placeholder {
 								/* Firefox 19+ */
 								// color: red;
 								font-family: SourceSansPro-ExtraLight;
 								font-size: 16px;
-									color:rgb(43,43,43);
+								color: rgb(43,43,43);
 				}
 				 :-ms-input-placeholder {
 								// color: red;
 								font-family: SourceSansPro-ExtraLight;
 								font-size: 16px;
-									color:rgb(43,43,43);
+								color: rgb(43,43,43);
 				}
 }
 // .jumbotron {
@@ -809,8 +809,8 @@ a:focus {
 								font-size: 32px;
 								padding-top: 30px;
 								padding-bottom: 5px;
-								color: rgb(149,149,149);
-								text-align: center;
+								color:rgb(149,149,149);
+								 text-align: center;
 								font-family: SourceSansPro-Semibold;
 				}
 				.thumbnail {
@@ -942,24 +942,7 @@ a:focus {
 				width: 100%;
 				height: 447px;
 }
-// .jumbotron {
-// 				background: url("../images/GOAhome.jpg")no-repeat center center;
-// 				background-repeat: no-repeat;
-// 				-webkit-background-size: cover;
-// 				-moz-background-size: cover;
-// 				-o-background-size: cover;
-// 				background-size: cover;
-// }
-// hr.style17 {
-// 	border-top: 1px solid #8c8b8b;
-// 	text-align: center;
-// }
-// hr.style17:after {
-// 	content: 'V';
-// 	display: inline-block;
-//
-//
-// }
+
 .packagePic {
 				background: url("../images/Packages265(1).jpg")no-repeat center center;
 				background-repeat: no-repeat;
