--- a/Gmt/templates/views/packages.hbs
+++ b/Gmt/templates/views/packages.hbs
@@ -1,5 +1,5 @@
 {{>header}}
-<div class="picture marginAlign ">
+<div class="packagePic marginAlign ">
 	<div class="row" style="padding-top:205px;">
 		<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
 			<div class="row">
