--- a/Gmt/templates/views/services.hbs
+++ b/Gmt/templates/views/services.hbs
@@ -10,7 +10,7 @@
       <div class="caption">
         <h3>Provider Research</h3>
         <p>...</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+
       </div>
     </div>
   </div>
@@ -21,7 +21,7 @@
       <div class="caption">
         <h3>Medical Visa</h3>
         <p>...</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+
       </div>
     </div>
   </div>
@@ -32,7 +32,6 @@
       <div class="caption">
         <h3>Flight Booking</h3>
         <p>...</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
       </div>
     </div>
   </div>
@@ -43,7 +42,6 @@
       <div class="caption">
         <h3>Flight Booking</h3>
         <p>...</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
       </div>
     </div>
   </div>
@@ -54,7 +52,6 @@
       <div class="caption">
         <h3>Flight Booking</h3>
         <p>...</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
       </div>
     </div>
   </div>
@@ -65,7 +62,7 @@
       <div class="caption">
         <h3>Flight Booking</h3>
         <p>...</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+        <!-- <p><a href="#" class="btn btn-default" role="button">Button</a></p> -->
       </div>
     </div>
   </div>
